--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,21 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "noImplicitAny": true,
-    "sourceMap": true,
-    "noUnusedParameters": true,
-    "noUnusedLocals": true,
-    "noImplicitThis": true,
-    "diagnostics": true,
-    "listFiles": true,
-    "pretty": true,
-    "noEmitOnError": false,
-    "strictNullChecks": true,
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitReturns": true,
-    "declaration": true,
+    "moduleResolution": "node",
+    "target": "es5",
+    "module":"es2015",
+    "lib": [
+      "es2015",
+      "dom"
+    ],
     "strict": true,
-    "outDir": "./dist"
+    "sourceMap": true,
+    "declaration": true,
+    "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   },
   "include": [
     "src/**/*.ts"
