--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,13 @@
     ],
     "strict": true,
     "sourceMap": true,
-    "declaration": true,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "typeRoots": [
       "node_modules/@types"
-    ]
+    ],
+    "outDir": "dist"
   },
   "include": [
     "src/**/*.ts"
